Adding horizontal padding to search input

--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -138,7 +138,7 @@ html
 input[type="search"]
   +border-radius(10px)
   -webkit-appearance: caret
-  padding: 0.25em 0
+  padding: 0.25em
 
 input[type="search"]::-webkit-search-cancel-button 
   display: none
