Adding ellipses at end of search result excerpts

--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -195,10 +195,13 @@ article
       text-decoration: none
       font-weight: 400
 
-  blockquote
+  .excerpt
     font-size: 1.5em
     b
       font-weight: 700
+
+    &:after
+      content: "…"
 
 footer
   border-top: 1px #ddd solid
