--- a/views/index.haml
+++ b/views/index.haml
@@ -11,3 +11,4 @@
         Examples: [UIView](/search?q=UIView), [Accelerate](/search?q=Accelerate), [Map Kit](/search?q=Map+Kit), [Bluetooth](/search?q=Bluetooth), [NSHipster](/search?q=NSHipster)
 
 = haml :'years/_2013'
+= haml :'years/_2012'
