Moving away from dotsub

--- a/views/contribute.haml
+++ b/views/contribute.haml
@@ -8,11 +8,4 @@
 
     After you get the hang of it, you should be able to crank out a transcription in near real-time. And by taking the time to type everything out, you'll know the source material better than you could ever imagine.
 
-    ## How to Contribute
-
-    1. [Create a Dotsub account](http://dotsub.com/enterprise/signup)
-    2. Post a comment on [this GitHub Issue thread](https://github.com/mattt/asciiwwdc.com/issues/13) with your Dotsub username.
-    3. Once someone on the team has added you to the ASCIIwwdc group on Dotsub, you'll be all set to start transcribing videos _(unfortunately, this isn't something that can be automated yet)_.
-
-    > [Dotsub](http://dotsub.com/) is a free, crowdsourcing-friendly video transcription CMS that will be used to provide tooling around the whole process.
-
+    [See this GitHub Issues thread for full instructions](https://github.com/mattt/asciiwwdc.com/issues/13).
