Updating contribution instructions

--- a/views/contribute.haml
+++ b/views/contribute.haml
@@ -8,4 +8,11 @@
 
     After you get the hang of it, you should be able to crank out a transcription in near real-time. And by taking the time to type everything out, you'll know the source material better than you could ever imagine.
 
-    [See this GitHub Issues thread for full instructions](https://github.com/mattt/asciiwwdc.com/issues/13).
+    ## Instructions
+
+    - Select a [session video on Amara](http://www.amara.org/en/profiles/videos/asciiwwdc/)
+    - Choose the English transcription on the left sidebar <br/>_(or click "Be the first to create subtitles!" if it doesn't exist yet)_
+    - Use the in-browser widget to transcribe the video
+
+    Transcriptions will be pushed to ASCIIwwdc periodically.<br/>
+    Follow [@ASCIIwwdc](https://twitter.com/ASCIIwwdc) for the latest changes to the site.
