--- a/views/layout.haml
+++ b/views/layout.haml
@@ -48,8 +48,10 @@
           :markdown
             Created by normalizing and indexing video transcript files provided for WWDC videos. Check out the app's [source code on GitHub](https://github.com/mattt/asciiwwdc.com) for additional implementation details, as well as information about the webservice APIs made available.
 
-            Additional transcripts for 2012 WWDC content graciously contributed by [Rev.com](http://www.rev.com), and [community volunteers](https://github.com/mattt/wwdc-session-transcripts/graphs/contributors).
+          :plain
+            <p>Additional transcripts for 2012 WWDC content graciously contributed by <a href="http://www.rev.com" rel="nofollow">Rev.com</a>, and <a href="https://github.com/mattt/wwdc-session-transcripts/graphs/contributors" rel="nofollow">community volunteers</a></p>
 
+          :markdown
             Built on [Sinatra](http://www.sinatrarb.com). Powered by [Heroku](https://www.heroku.com) and [Heroku Postgres](https://postgres.heroku.com).
 
         #copyright
