--- a/views/layout.haml
+++ b/views/layout.haml
@@ -61,3 +61,14 @@
         #credits
           :markdown
             Created by [Mattt Thompson](https://github.com/mattt).
+
+    :plain
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-2079355-25', 'asciiwwdc.com');
+        ga('send', 'pageview');
+      </script>
