--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,6 +7,7 @@
     - description = (@session.description rescue "Searchable full-text transcripts of WWDC sessions.")
     %meta{name: "author", content: "Mattt Thompson"}
     %meta{name: "description", content: description}
+    %meta{name: "viewport", content: "width=device-width; initial-scale=1.0;"}
 
     %link{rel: "stylesheet", type: 'text/css', href: "/css/screen.css", media: "screen", charset: "utf-8"}
 
