Adding missing mobile styles

--- a/public/sass/_mobile.sass
+++ b/public/sass/_mobile.sass
@@ -74,6 +74,21 @@
 
       dt, dd
 
+  .call-to-action
+    display: none !important
+
+  #search-results
+    header
+      text-align: center
+      font-size: 90%
+
+    dl
+      font-size: 80% !important
+      margin: 0 !important
+
+    dt
+      text-align: center
+
   footer
     width: 100% !important
 
