--- a/views/layout.haml
+++ b/views/layout.haml
@@ -29,7 +29,7 @@
 
         - unless request.path == '/'
           %form#search{method: 'GET', action: '/search'}
-            %input{type: 'search', name: 'q', value: @query, placeholder: "Search for WWDC Sessions..."}
+            %input{type: 'search', name: 'q', value: @query, placeholder: "Search for WWDC Sessions...", tabindex: 1, autocapitalize: "off", autocorrect: "off", autofocus: "autofocus", "x-webkit-speech" => "x-webkit-speech"}
 
         = yield_content :header
 
