--- a/views/index.haml
+++ b/views/index.haml
@@ -10,6 +10,8 @@
       :markdown
         Examples: [UIView](/search?q=UIView), [Accelerate](/search?q=Accelerate), [Map Kit](/search?q=Map+Kit), [Bluetooth](/search?q=Bluetooth), [NSHipster](/search?q=NSHipster)
 
+= haml :'years/_2014'
 = haml :'years/_2013'
 = haml :'years/_2012'
+= haml :'years/_2011'
 = haml :'years/_2010'
