--- a/views/layout.haml
+++ b/views/layout.haml
@@ -57,7 +57,7 @@
 
         #copyright
           :markdown
-            All content copyright © 2013 Apple Inc. All rights reserved.
+            All content copyright © 2010 – 2014 Apple Inc. All rights reserved.
 
         #credits
           :markdown
