--- a/views/session.haml
+++ b/views/session.haml
@@ -15,7 +15,9 @@
       - if @session.year == 2014
         %h1 Transcript Coming Soon
         :markdown
-          Apple is expected to release transcriptions for WWDC 2014 sessions in the near future. [Follow @asciiWWDC](https://twitter.com/asciiwwdc) for the latest updates.
+          Apple is expected to release transcriptions for WWDC 2014 sessions in the near future.
+
+          [Follow @asciiWWDC](https://twitter.com/asciiwwdc) to be notified of future updates.
       - elsif @session.year == 2012
         .contribute
           %hgroup
