--- a/views/index.haml
+++ b/views/index.haml
@@ -8,7 +8,7 @@
     %input{type: 'search', name: 'q', value: @query, placeholder: "Search for WWDC Sessions...", tabindex: 1, autocapitalize: "off", autocorrect: "off", autofocus: "autofocus", "x-webkit-speech" => "x-webkit-speech"}
     %label
       :markdown
-        Examples: [UIView](/search?q=UIView), [Accelerate](/search?q=Accelerate), [Map Kit](/search?q=Map+Kit), [Bluetooth](/search?q=Bluetooth), [NSHipster](/search?q=NSHipster)
+        Examples: [Swift](/search?q=Swift), [Handoff](/search?q=Handoff), [SpriteKit](/search?q=SpriteKit), [Bluetooth](/search?q=Bluetooth), [NSHipster](/search?q=NSHipster)
 
 = haml :'years/_2014'
 = haml :'years/_2013'
