Adding session details to search results

--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -223,6 +223,15 @@ article
   dl
     padding: 1em 0
 
+    .details
+      display: block
+      color: #777
+      font-size: 0.75em
+      font-weight: 400
+
+    .year:after
+      content: " • "
+
   dt
     font-size: 2em
     a
