--- a/views/search.haml
+++ b/views/search.haml
@@ -6,5 +6,8 @@
     - for session in @sessions
       %dt{data: {rank: session.rank}, id: "session-#{session.number}"}
         %a{href: url(session) + "?q=#{@query}"}= session.title
+        %span.details
+          %span.year= "WWDC #{session.year}"
+          %span.number= "Session #{session.number}"
       %dd
         %blockquote.excerpt= session.excerpt
