Adding styling for transcript annotations

--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -219,6 +219,10 @@ article
   p
     font-size: 1.25em
 
+    &.annotation
+      font-style: italic
+      color: #777
+
 #search-results
   dl
     padding: 1em 0
