Minor copy editing

--- a/views/index.haml
+++ b/views/index.haml
@@ -2,7 +2,7 @@
   %hgroup
     :markdown
       # Searchable full-text transcripts of WWDC sessions
-      ## Find the content you've been looking for, without having to scrub through session videos
+      ## Find the content you're looking for, without scrubbing through videos
 
   %form#search{method: 'GET', action: '/search'}
     %input{type: 'search', name: 'q', value: @query, placeholder: "Search for WWDC Sessions...", tabindex: 1, autocapitalize: "off", autocorrect: "off", autofocus: "autofocus", "x-webkit-speech" => "x-webkit-speech"}
