--- a/views/years/_2010.haml
+++ b/views/years/_2010.haml
@@ -1,10 +1,19 @@
-%section#wwdc-2010.conference
+%section#wwdc-2010.conference{itemscope: true, itemtype: "http://schema.org/Event"}
   %header
     %img{src: '/images/wwdc-2010.png', width: 125, height: 125}
 
     %hgroup
-      %h1 WWDC 2010
+      %h1{itemprop: "name"} WWDC 2010
       %h2 iPhone 4
+
+    %time{itemprop: "startDate", content: "2010-06-07T10:00"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+      %span{itemprop: "name"} Moscone West
+      %span{itemprop: "streetAddress"}747 Howard St.
+      %span{itemprop: "addressLocality"} San Francisco
+      %span{itemprop: "addressRegion"} CA
+      %span{itemprop: "postalCode"} 94103
+      %span{itemprop: "addressCountry"} US
 
   - tracks = @sessions[2010].group_by(&:track)
 
@@ -18,7 +27,7 @@
           %dl.sessions
             - for session in sessions
               %dt{id: "session-#{session.number}"}= session.number
-              %dd.title
-                %a{href: url(session), title: session.title}= session.title + ("*" unless session.transcribed?).to_s
+              %dd.title{itemprop: "subEvent", itemscope: true, itemtype: "http://schema.org/Event"}
+                %a{href: url(session), title: session.title, itemprop: "name"}= session.title + ("*" unless session.transcribed?).to_s
 
 
