--- a/views/years/_2013.haml
+++ b/views/years/_2013.haml
@@ -1,10 +1,19 @@
-%section#wwdc-2013.conference
+%section#wwdc-2013.conference{itemscope: true, itemtype: "http://schema.org/Event"}
   %header
     %img{src: '/images/wwdc-2013.png', width: 130, height: 125}
 
     %hgroup
-      %h1 WWDC 2013
+      %h1{itemprop: "name"} WWDC 2013
       %h2 iOS 7, OS X Mavericks, Xcode 5
+
+    %time{itemprop: "startDate", content: "2013-06-10T10:00"}
+    %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
+      %span{itemprop: "name"} Moscone West
+      %span{itemprop: "streetAddress"}747 Howard St.
+      %span{itemprop: "addressLocality"} San Francisco
+      %span{itemprop: "addressRegion"} CA
+      %span{itemprop: "postalCode"} 94103
+      %span{itemprop: "addressCountry"} US
 
   - tracks = @sessions[2013].group_by(&:track)
   - groups = [["Special Events", "Frameworks"], ["Services", "Tools", "Graphics and Games"], ["Media", "Core OS"]]
@@ -17,5 +26,5 @@
           %dl.sessions
             - for session in sessions
               %dt{id: "session-#{session.number}"}= session.number
-              %dd.title
-                %a{href: url(session), title: session.title}= session.title
+              %dd.title{itemprop: "subEvent", itemscope: true, itemtype: "http://schema.org/Event"}
+                %a{href: url(session), title: session.title, itemprop: "name"}= session.title
