--- a/views/layout.haml
+++ b/views/layout.haml
@@ -28,6 +28,8 @@
       %link{rel: "alternate", hreflang: "x-default", href: url(@session)}
       %link{rel: "alternate", type: 'application/json', href: url(@session), charset: "utf-8"}
       %link{rel: "alternate", type: 'text/vtt', href: url(@session), charset: "utf-8"}
+    - elsif @query
+      %meta{name: "robots", content: "noindex"}
     - else
       %link{rel: "canonical", href: "http://asciiwwdc.com"}
       %link{rel: "alternate", hreflang: "en-us", href: "http://asciiwwdc.com"}
