Fixes description margin for mobile layout.

--- a/public/sass/_mobile.sass
+++ b/public/sass/_mobile.sass
@@ -35,8 +35,7 @@
     dl, article p
       font-size: 125%
 
-
-    article p, article h1, article h2
+    article p, article h1, article h2, article h3
       padding: 0 1em
 
     .contribute
