WWDC 2015 coming soon

--- a/views/index.haml
+++ b/views/index.haml
@@ -10,6 +10,7 @@
       :markdown
         Examples: [Swift](/search?q=Swift), [Handoff](/search?q=Handoff), [SpriteKit](/search?q=SpriteKit), [Bluetooth](/search?q=Bluetooth), [NSHipster](/search?q=NSHipster)
 
+= haml :'years/_2015'
 = haml :'years/_2014'
 = haml :'years/_2013'
 = haml :'years/_2012'
