Changes for WWDC 2015

--- a/public/sass/_mobile.sass
+++ b/public/sass/_mobile.sass
@@ -18,8 +18,13 @@
       font-size: 70%
       margin-bottom: 2em !important
 
-      h1, h2
+      h1
         padding: 0 1em
+        
+      h2
+        padding: 0 1em
+        font-size: 1.75em !important
+        color: lighten($secondary-color, 5) !important
 
     form
       float: none !important
@@ -46,6 +51,7 @@
       header
         width: 100% !important
         padding-top: 0
+        padding-bottom: 2em
 
         img
           display: block
@@ -66,10 +72,10 @@
 
     .group
       width: 100%
-      padding: 1em
+      padding: 0 1em
 
       dl
-        padding: 1em
+        padding: 0 1em 1em
 
       dt, dd
 
@@ -95,5 +101,5 @@
       display: block
       width: 100% !important
       margin: 0
-      p, strong
+      p, .logo
         padding: 0 1em
