--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -1,12 +1,12 @@
 @import "compass"
 @import "blueprint"
 
+$primary-color: #440070
+$secondary-color: #c900d6
+
 @import "./mobile"
 
 +global-reset
-
-$primary-color: #440070
-$secondary-color: #c900d6
 
 =prevent-selection
   -webkit-touch-callout: none
@@ -301,6 +301,9 @@ footer
 
   a
     text-decoration: underline !important
+
+  .nshipster
+    margin: 0 0 -4px -2px
 
   #about
     +column(6)
