--- a/views/layout.haml
+++ b/views/layout.haml
@@ -59,9 +59,13 @@
           :markdown
             Searchable full-text transcripts of WWDC sessions.
 
+          :plain
+            <p><a href="http://nshipster.com/"><img src="/images/nshipster@2x.png" class="nshipster" alt="NSMustachio" width="45" height="26"></a><br>
+            An <strong>NSHipster</strong> Project</p>
+
         #colophon
           :markdown
-            Created by normalizing and indexing video transcript files provided for WWDC videos. Check out the app's [source code on GitHub](https://github.com/mattt/asciiwwdc.com) for additional implementation details, as well as information about the webservice APIs made available.
+            Created by normalizing and indexing video transcript files provided for WWDC videos. Check out the app's [source code on GitHub](https://github.com/ASCIIwwdc/asciiwwdc.com) for additional implementation details, as well as information about the webservice APIs made available.
 
           :plain
             <p>Additional transcripts for 2012 WWDC content graciously contributed by <a href="http://www.rev.com" rel="nofollow">Rev.com</a>, as well as Carlos Arcenas, Christopher Bowns, Daniel Schneller, Janek Spaderna, Jorge Galrito, Tyler Bindon, YoonHyung Jo, and other <a href="https://github.com/mattt/wwdc-session-transcripts/graphs/contributors" rel="nofollow">community volunteers</a></p>
@@ -72,10 +76,6 @@
         #copyright
           :markdown
             All content copyright © 2010 – 2014 Apple Inc. All rights reserved.
-
-        #credits
-          :markdown
-            Created by [Mattt Thompson](https://github.com/mattt).
 
     :plain
       <script>
