--- a/views/years/_2015.haml
+++ b/views/years/_2015.haml
@@ -4,7 +4,7 @@
 
     %hgroup
       %h1{itemprop: "name"} WWDC 2015
-      %h2 Soon...
+      %h2 iOS 9, OS X El Capitan, watchOS 2, Swift 2
 
     %time{itemprop: "startDate", content: "2015-06-08T10:00"}
     %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
@@ -15,3 +15,17 @@
       %span{itemprop: "postalCode"} 94103
       %span{itemprop: "addressCountry"} US
 
+  - tracks = @sessions[2015].group_by(&:track)
+
+  - groups = [["Featured", "App Frameworks"], ["Distribution", "Developer Tools", "Media"], ["Graphics and Games", "System Frameworks", "Design"]]
+  - for group in groups
+    .group
+      - for track in group
+        - sessions = tracks[track]
+        %section.track{id: track.downcase.gsub(/\s+/, "-")}
+          %h1= track
+          %dl.sessions
+            - for session in sessions
+              %dt{id: "session-#{session.number}"}= session.number
+              %dd.title{itemprop: "subEvent", itemscope: true, itemtype: "http://schema.org/Event"}
+                %a{href: url(session), title: session.title, itemprop: "name"}= session.title + ("*" unless session.transcribed?).to_s
