--- a/public/sass/_mobile.sass
+++ b/public/sass/_mobile.sass
@@ -1,3 +1,18 @@
+@media (max-width:990px)
+  [role="container"]
+    width: inherit !important
+    margin: 0 20px !important
+
+    .group
+      width: 45%
+      margin-right: 10px
+      
+      &:nth-of-type(3n)
+        margin-right: 10px
+        
+      &:nth-of-type(2n)
+        margin-right: 0
+
 @media (max-width:480px)
   html body
     width: 100% !important
@@ -7,7 +22,8 @@
 
   [role="container"]
     width: 100% !important
-
+    margin: 0 !important
+    
     #logo
       display: block !important
       margin: 0
