Use actual correct names for WWDC 2016

--- a/views/years/_2016.haml
+++ b/views/years/_2016.haml
@@ -4,7 +4,7 @@
 
     %hgroup
       %h1{itemprop: "name"} WWDC 2016
-      %h2 iOS 10, OS X Karl the Fog, Siri, Xcode 8
+      %h2 iOS 10, macOS Sierra, watchOS 3, Xcode 8
 
     %time{itemprop: "startDate", content: "2016-06-013T10:00"}
     %address{itemprop: "location", itemscope: true, itemtype: "http://schema.org/PostalAddress", hidden: true, style: "display:none;"}
