--- a/views/index.haml
+++ b/views/index.haml
@@ -10,6 +10,8 @@
       :markdown
         Examples: [Swift](/search?q=Swift), [Handoff](/search?q=Handoff), [SpriteKit](/search?q=SpriteKit), [Bluetooth](/search?q=Bluetooth), [NSHipster](/search?q=NSHipster)
 
+= haml :'years/_2018'
+= haml :'years/_2017'
 = haml :'years/_2016'
 = haml :'years/_2015'
 = haml :'years/_2014'
