Convert 2010 image to jpg

--- a/views/years/_2010.haml
+++ b/views/years/_2010.haml
@@ -1,6 +1,6 @@
 %section#wwdc-2010.conference{itemscope: true, itemtype: "http://schema.org/Event"}
   %header
-    %img{src: '/images/wwdc-2010.png', width: 125, height: 125}
+    %img{src: '/images/wwdc-2010.jpg', width: 125, height: 125}
 
     %hgroup
       %h1{itemprop: "name"} WWDC 2010
