Update ASCIIwwdc links to use  https

--- a/views/index.haml
+++ b/views/index.haml
@@ -25,10 +25,10 @@
   {
      "@context": "http://schema.org",
      "@type": "WebSite",
-     "url": "http://asciiwwdc.com/",
+     "url": "https://asciiwwdc.com/",
      "potentialAction": {
        "@type": "SearchAction",
-       "target": "http://asciiwwdc.com/search?q={query}",
+       "target": "https://asciiwwdc.com/search?q={query}",
        "query-input": "required name=query"
      }
   }
