--- a/views/years/_2010.haml
+++ b/views/years/_2010.haml
@@ -1,6 +1,6 @@
 %section#wwdc-2010.conference{itemscope: true, itemtype: "http://schema.org/Event"}
   %header
-    %img{src: '/images/wwdc-2010.jpg', width: 125, height: 125}
+    %img{src: '/images/wwdc-2010.jpg', width: 125, height: 125, alt: "WWDC 2010"}
 
     %hgroup
       %h1{itemprop: "name"} WWDC 2010
@@ -26,7 +26,7 @@
           %h1= track
           %dl.sessions
             - for session in sessions
-              %dt{id: "session-#{session.number}"}= session.number
+              %dt{id: "wwdc-2010-session-#{session.number}"}= session.number
               %dd.title{itemprop: "subEvent", itemscope: true, itemtype: "http://schema.org/Event"}
                 %a{href: url(session), title: session.title, itemprop: "name"}= session.title + ("*" unless session.transcribed?).to_s
 
