--- a/views/years/_2013.haml
+++ b/views/years/_2013.haml
@@ -1,6 +1,6 @@
 %section#wwdc-2013.conference{itemscope: true, itemtype: "http://schema.org/Event"}
   %header
-    %img{src: '/images/wwdc-2013.png', width: 130, height: 125}
+    %img{src: '/images/wwdc-2013.png', width: 130, height: 125, alt: "WWDC 2013"}
 
     %hgroup
       %h1{itemprop: "name"} WWDC 2013
@@ -25,6 +25,6 @@
           %h1= track
           %dl.sessions
             - for session in sessions
-              %dt{id: "session-#{session.number}"}= session.number
+              %dt{id: "wwdc-2013-session-#{session.number}"}= session.number
               %dd.title{itemprop: "subEvent", itemscope: true, itemtype: "http://schema.org/Event"}
                 %a{href: url(session), title: session.title, itemprop: "name"}= session.title
