--- a/views/index.haml
+++ b/views/index.haml
@@ -5,7 +5,7 @@
       ## Find the content you're looking for, without scrubbing through videos
 
   %form#search{method: 'GET', action: '/search'}
-    %input{type: 'search', name: 'q', value: @query, placeholder: "Search for WWDC Sessions...", tabindex: 1, autocapitalize: "off", autocorrect: "off", autofocus: "autofocus", "x-webkit-speech" => "x-webkit-speech"}
+    %input{type: 'search', name: 'q', value: @query, placeholder: "Search for WWDC Sessions...", autocapitalize: "off", autocorrect: "off", autofocus: "autofocus", "x-webkit-speech" => "x-webkit-speech"}
     %label
       :markdown
         Examples: [Swift](/search?q=Swift), [Handoff](/search?q=Handoff), [SpriteKit](/search?q=SpriteKit), [Bluetooth](/search?q=Bluetooth), [NSHipster](/search?q=NSHipster)
