Set GA transport to beacon

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -85,5 +85,6 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-2079355-25', 'asciiwwdc.com');
+        ga('set', 'transport', 'beacon');
         ga('send', 'pageview');
       </script>
