Add favicons, et al.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,6 +16,14 @@
 
     %link{rel: "stylesheet", type: 'text/css', href: "/css/screen.css", media: "screen", charset: "utf-8"}
 
+    %link{href: "/apple-touch-icon.png", rel: "apple-touch-icon", sizes: "180x180"}
+    %link{href: "/favicon-32x32.png", rel: "icon", sizes: "32x32", type: "image/png"}
+    %link{href: "/favicon-16x16.png", rel: "icon", sizes: "16x16", type: "image/png"}
+    %link{href: "/site.webmanifest", rel: "manifest"}
+    %link{color: "#33005d", href: "/safari-pinned-tab.svg", rel: "mask-icon"}
+    %meta{content: "#603cba", name: "msapplication-TileColor"}
+    %meta{content: "#ffffff", name: "theme-color"}
+
     %meta{property: "og:site_name", content: "ASCIIwwdc"}
     %meta{property: "og:title", content: title("ASCIIwwdc", (@session.title rescue nil))}
     %meta{property: "og:url", content: "https://asciiwwdc.com"}
