--- a/views/years/_2010.haml
+++ b/views/years/_2010.haml
@@ -28,6 +28,6 @@
             - for session in sessions
               %dt{id: "wwdc-2010-session-#{session.number}"}= session.number
               %dd.title{itemprop: "subEvent", itemscope: true, itemtype: "http://schema.org/Event"}
-                %a{href: url(session), title: session.title, itemprop: "name"}= session.title + ("*" unless session.transcribed?).to_s
+                %a{href: url(session), title: session.title, itemprop: "name"}= session.title
 
 
