Add support for iPhone X notch

--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -36,6 +36,7 @@ html
 
   body
     background: #fff
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left)
     h1, h2, input
       font-family: "Avenir", "Helvetica", sans-serif
 
