--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,8 +12,7 @@
     - description = (@session.description rescue "Searchable full-text transcripts of WWDC sessions.")
     %meta{name: "author", content: "Mattt"}
     %meta{name: "description", content: description}
-    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
-
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1, viewport-fit=cover"}
     %link{rel: "stylesheet", type: 'text/css', href: "/css/screen.css", media: "screen", charset: "utf-8"}
 
     %link{href: "/apple-touch-icon.png", rel: "apple-touch-icon", sizes: "180x180"}
