--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -58,7 +58,7 @@ html
       +box-shadow(darken($primary-color, 10%) 0px -1px 10px inset)
 
       margin-bottom: 3em
-      padding: 1em 0
+      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left)
 
       hgroup
         margin: 5em auto 0 auto
