Add analytics script

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -91,3 +91,4 @@
             "property": 1
         }
       </script>
+      <script async defer src="https://analytics.asciiwwdc.com/tracker.js"></script>
